# algohealer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  default_accounts.json  pyproject.toml
algohealer/: cli.py  manager.py  starter_data.json
algohealer/db/: conn.py  enums.py
algohealer/navigators/base/: social_media_navigator.py
algohealer/navigators/instagram/: content.py  instagram_navigator.py
